# claude-finance-kit

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
.claude-plugin/: marketplace.json  plugin.json
.claude/agents/: fundamental-analyst.md  technical-analyst.md
.claude/commands/: claude-finance-kit.md  sync-doc.md  sync-skill.md
.claude/hooks/: session-reminder.sh
.claude/references/: finance-kit-install-guide.md  orchestration-protocol.md
.claude/skills/market-research/: SKILL.md
.claude/skills/news-sentiment/: SKILL.md
.claude/skills/stock-analysis/: SKILL.md
.github/workflows/: publish.yml  release.yml
agents/: fundamental-analyst.md  lead-analyst.md  macro-researcher.md  marcus-vance.md  technical-analyst.md
cli/: .gitignore  README.md  package-lock.json  package.json
cli/src/: index.ts
commands/: claude-finance-kit.md
docs/: 01-getting-started.md  02-stock-module.md  03-market-module.md  04-macro-module.md  05-fund-module.md  06-commodity-module.md  07-technical-analysis.md  08-collector-module.md  09-news-module.md  10-advanced-topics.md  12-search-module.md  README.md
landing/: index.html
plans/260331-2324-rename-to-claude-finance-kit/: phase-01-structure-and-config.md  phase-02-python-imports.md  phase-03-docs-and-metadata.md  phase-04-verification.md  plan.md
plans/reports/: Explore-260331-2324-rename-scope.md  researcher-260401-1902-claude-desktop-project-format.md
plugin/agents/: fundamental-analyst.md  lead-analyst.md
plugin/references/: finance-kit-install-guide.md
references/: api-technical-analysis.md  claude-finance-kit-install-guide.md  orchestration-protocol.md
scripts/: export-requirements.sh  install-claude-plugin.sh  package-plugin.sh
skills/market-research/: SKILL.md
skills/news-sentiment/: SKILL.md
skills/stock-analysis/: SKILL.md
src/claude_finance_kit/: __init__.py
tests/: test_core.py  test_imports.py  test_market_facade.py  test_news.py  test_registry.py  test_search.py  test_stock_facade.py  test_ta_indicators.py
(+179 files in other folders)
