[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claude-finance-kit"
version = "0.1.13"
description = "Vietnamese stock market data & analysis library"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "claude-finance-kit contributors" },
]
keywords = ["vietnam", "stock", "finance", "market", "analysis"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Office/Business :: Financial :: Investment",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "pandas>=2.0.0",
    "requests>=2.31.0",
    "pydantic>=2.0.0",
    "tenacity>=8.0.0",
    "pytz>=2023.3",
    "beautifulsoup4>=4.12.0",
]

[project.optional-dependencies]
ta = []
search = [
    "perplexityai>=0.30.0",
]
collector = [
    "duckdb>=0.8.0",
    "pyarrow>=14.0.0",
    "tqdm>=4.67.0",
    "aiohttp>=3.11.0",
    "nest-asyncio>=1.6.0",
    "websockets>=12.0",
]
news = [
    "scipy>=1.10.0",
    "pyarrow>=14.0.0",
]
all = [
    "claude-finance-kit[ta,collector,news,search]",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.4.0",
]

[project.urls]
Homepage = "https://github.com/hongbietcode/claude-finance-kit"
Repository = "https://github.com/hongbietcode/claude-finance-kit"
Issues = "https://github.com/hongbietcode/claude-finance-kit/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/claude_finance_kit"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
